@@ -57,5 +57,4 @@
 	kill window (C-b backsp)
 	kill session (no not bind by default)
 	set shell
-- handle tmux in tmux (check $TMUX and abort)
 - check for some reqd terminfo caps on startup
