@@ -1,4 +1,4 @@
-/* $Id: server-msg.c,v 1.25 2007-10-04 22:04:01 nicm Exp $ */
+/* $Id: server-msg.c,v 1.26 2007-10-12 14:46:48 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -122,6 +122,12 @@ server_msg_fn_command(struct hdr *hdr, struct client *c)
 
 	ctx.client = c;
 	ctx.flags = 0;
+
+	if (data.sid.pid != -1 && (cmd->entry->flags & CMD_CANTNEST)) {
+		server_msg_fn_command_error(&ctx, "sessions should be nested "
+		    "with care. unset $TMUX and retry to force");
+		return (0);
+	}
 
 	if (cmd->entry->flags & CMD_NOSESSION)
 		ctx.session = NULL;
