@@ -1,5 +1,6 @@
 12 October 2007
 
+* (nicm) Add a warning if $TMUX exists on new/attach.
 * (nicm) send-prefix command. Bound to C-b by default.
 * (nicm) set status, status-fg, status-bg commands. fg and bg are as a number
   from 0 to 8 or a string ("red", "blue", etc). status may be 1/0, on/off,
@@ -126,5 +127,5 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.40 2007-10-12 13:51:44 nicm Exp $
+$Id: CHANGES,v 1.41 2007-10-12 14:46:48 nicm Exp $
 
